--- a/ruoyi-admin/src/main/resources/templates/main.html
+++ b/ruoyi-admin/src/main/resources/templates/main.html
@@ -25,15 +25,15 @@
 
             <hr>
         </div>-->
-        <div class="col-sm-3">
+       <!-- <div class="col-sm-3">
             <h2>Hello,Guest</h2>
             <small>移动设备访问请扫描以下二维码：</small>
             <br>
             <br>
             <img th:src="@{/img/qr_code.png}" width="100%" style="max-width:264px;">
             <br>
-        </div>
-        <div class="col-sm-5">
+        </div>-->
+        <!--<div class="col-sm-5">
             <h2>若依后台管理框架</h2>
             <p>一直想做一款后台管理系统，看了很多优秀的开源项目但是发现没有合适自己的。于是利用空闲休息时间开始自己写一套后台系统。如此有了若依管理系统。，她可以用于所有的Web应用程序，如<b>网站管理后台</b>，<b>网站会员中心</b>，<b>CMS</b>，<b>CRM</b>，<b>OA</b>等等，当然，您也可以对她进行深度定制，以做出更强系统。所有前端后台代码封装过后十分精简易上手，出错概率低。同时支持移动客户端访问。系统会陆续更新一些实用功能。</p>
             <p>
@@ -51,8 +51,8 @@
                     <i class="fa fa-home"></i> 访问主页
                 </a>
             </p>
-        </div>
-        <div class="col-sm-4">
+        </div>-->
+       <!-- <div class="col-sm-4">
             <h4>技术选型：</h4>
             <ol>
                 <li>核心框架：Spring Boot。</li>
@@ -64,7 +64,7 @@
                 <li>工具类：Fastjson。</li>
                 <li>更多……</li>
             </ol>
-        </div>
+        </div>-->
 
     </div>
     <div class="wrapper wrapper-content">
