--- a/text-module/src/main/resources/templates/system/customer/customer.html
+++ b/text-module/src/main/resources/templates/system/customer/customer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
-    <th:block th:include="include :: header('测试用列表')" />
+    <th:block th:include="include :: header('测试客户表')" />
 </head>
 <body class="gray-bg">
      <div class="container-div">
